--- a/src/components/common/css/banner.css
+++ b/src/components/common/css/banner.css
@@ -8,11 +8,11 @@
 .wrapper .banner img{
      border-radius: 1rem;
 }
-.article .card{
+/* .article .card{
      border: none;
      color: var(--base);
 }
 .article .card i{
      font-size: 2rem;
      padding: 1rem 0;
-}
+} */
