--- a/src/components/common/css/banner.css
+++ b/src/components/common/css/banner.css
@@ -1,18 +1,18 @@
-*{
-     padding: 0;
-     margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-:root{
-     --base: #644c38;
+:root {
+  --base: #644c38;
 }
-.wrapper .banner img{
-     border-radius: 1rem;
+.wrapper img {
+  border-radius: 1rem;
 }
-.article .card{
-     border: none;
-     color: var(--base);
+.article .card {
+  border: none;
+  color: var(--base);
 }
-.article .card i{
-     font-size: 2rem;
-     padding: 1rem 0;
+.article .card i {
+  font-size: 2rem;
+  padding: 1rem 0;
 }
