--- a/src/components/common/css/nav.css
+++ b/src/components/common/css/nav.css
@@ -27,8 +27,25 @@
 .header .header-right .tool .btn {
   color: var(--base);
   font-size: 1.1rem;
+  padding: 0 1rem;
   border-radius: 10px;
   margin: 0 0.5rem 0 0.5rem;
+  cursor: pointer;
+}
+.header .header-right .tool .btn{
+  display: flex;
+  flex-direction: column;
+}
+.header .header-right .tool .btn span{
+  font-size: 1rem;
+}
+.header .header-right .tool .btn:hover i {
+  transform: scale(1.3);
+  transition: 0.2s linear;
+  text-shadow: 2px 2px 4px rgba(100, 76, 56, 0.5);
+}
+.menu {
+  background-color: var(--base-light);
 }
 .menu .menu-wrapper {
   display: flex;
