--- a/src/components/common/css/nav.css
+++ b/src/components/common/css/nav.css
@@ -2,21 +2,43 @@
   padding: 0;
   margin: 0;
 }
+
 :root {
   --base: #644c38;
   --base-light: #f7ede9;
+  --base-2: #978B82;
   --FFF: #fff;
 }
+
+.text_brown {
+  color: var(--base) !important;
+}
+
+.sidebar .text_brown:hover {
+  color: var(--base-2);
+  font-weight: bold;
+}
+
+.btn-nav {
+  border-color: var(--base) !important;
+  border-radius: 10px;
+}
+
+.logo-header {
+  width: 230px;
+}
+
 .header {
   display: flex;
-  justify-content: space-around;
 }
+
 .header .header-right .search .form-control {
   color: var(--base);
-  width: 25rem;
+  width: 15rem;
   border-radius: 0.7rem;
   background-color: var(--base-light);
 }
+
 .header .header-right .search .btn {
   color: var(--FFF);
   font-size: 1.1rem;
@@ -24,6 +46,7 @@
   margin: 0 0.5rem 0 0.5rem;
   background-color: var(--base);
 }
+
 .header .header-right .tool .btn {
   color: var(--base);
   font-size: 1.1rem;
@@ -32,41 +55,35 @@
   margin: 0 0.5rem 0 0.5rem;
   cursor: pointer;
 }
-.dropdown-toggle::after{
-  display: none;
-}
+
+
 .header .header-right .tool .btn {
   display: flex;
   flex-direction: column;
 }
+
 .header .header-right .tool .btn span {
   font-size: 1rem;
 }
+
 .header .header-right .tool .btn:hover i {
   transform: scale(1.3);
   transition: 0.2s linear;
   text-shadow: 2px 2px 4px rgba(100, 76, 56, 0.5);
 }
+
 .menu {
   background-color: var(--base-light);
 }
-.menu .menu-wrapper {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 1rem;
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-.menu .menu-wrapper li {
-  list-style: none;
-}
-.menu .menu-wrapper li .menu-item {
-  color: var(--base);
+
+.menu li .nav-link {
+  color: var(--base) !important;
   font-size: 1.01rem;
   font-weight: 600;
   text-decoration: none;
 }
-.menu .menu-wrapper li:hover {
+
+.menu li .nav-link:hover {
   transition: linear 0.1s;
   transform: scale(1.1);
   text-shadow: 0px 10px 10px rgb(122, 120, 120);
