--- a/src/components/user/css/cart.css
+++ b/src/components/user/css/cart.css
@@ -13,7 +13,7 @@
   color: var(--base);
 }
 
-.table {
+.card-cart {
   border-radius: 30px;
   background-color: #f8f7f6;
 }
@@ -21,7 +21,9 @@
 .table tr td {
   color: var(--base);
   font-weight: 500;
+  border: 0px;
 }
+
 
 .table tr:last-child {
   border-bottom: 1px solid var(--base-light);
@@ -37,6 +39,7 @@
 .table td .btn:hover {
   background-color: #644c38;
 }
+
 .table td .btn:hover i {
   color: var(--background);
 }
@@ -44,6 +47,7 @@
 .table td .btn i {
   color: var(--base);
 }
+
 .table td .quantity {
   width: 3rem;
   border: none;
@@ -52,7 +56,6 @@
   cursor: default;
   text-align: center;
   color: var(--base);
-  
   padding: 0.2rem 0.6rem;
   background-color: var(--base-light);
 }
