--- a/src/components/common/css/banner.css
+++ b/src/components/common/css/banner.css
@@ -9,6 +9,8 @@
 
 .wrapper img {
   border-radius: 1rem;
+  height: 100%;
+  width: 100%;
 }
 
 .article .card {
@@ -19,4 +21,9 @@
 .article .card i {
   font-size: 2rem;
   padding: 1rem 0;
+}
+
+.slick-next {
+  /* display: none !important; */
+  right: 20px;
 }
