--- a/src/components/admin/css/index-admin.css
+++ b/src/components/admin/css/index-admin.css
@@ -1,48 +1,76 @@
 .ant-carousel {
   padding: 0;
 }
+
 .ant-carousel img {
   width: 100%;
   border-radius: 10px;
+}
+.color-ora{
+  color:#ed9e0c !important;
+}
+.color-price {
+  color: #209C58 !important;
+}
+
+.color-status {
+  color: #202C9C !important;
 }
 
 .chart {
   background-color: #f5f5f5;
 }
+
+.dollar {
+  background-color: #DBFFEB;
+  padding: 0.5rem 1.2rem;
+  font-size: 2rem;
+  border-radius: 0.9rem;
+}
+
 /* styles.css */
 .ant-card {
   width: 250px;
-
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.ant-card .ant-card-body { 
+
+.ant-card .ant-card-body {
   border-radius: 7px;
 }
+
 .ant-card-body {
   text-align: center;
   color: #644c38;
-
   background-color: #f5f5f5;
 }
-.icon1 > span {
+
+.icon1>span {
   font-size: 24px;
-  color: #634BF8; /* Đặt kích thước cho icon */
+  color: #634BF8;
+  /* Đặt kích thước cho icon */
 }
-.icon2 > span {
+
+.icon2>span {
   font-size: 24px;
-  color: #644C38; /* Đặt kích thước cho icon */
+  color: #644C38;
+  /* Đặt kích thước cho icon */
 }
-.icon3 > span {
+
+.icon3>span {
   font-size: 24px;
-  color: #DB9526; /* Đặt kích thước cho icon */
+  color: #DB9526;
+  /* Đặt kích thước cho icon */
 }
-.icon4 > span {
+
+.icon4>span {
   font-size: 24px;
-  color: #FF012F; /* Đặt kích thước cho icon */
+  color: #FF012F;
+  /* Đặt kích thước cho icon */
 }
+
 .icon1 {
   text-align: center;
   margin-left: 65px;
@@ -52,8 +80,10 @@
   width: 70px;
   height: 70px;
   border-radius: 60px;
-  margin-right: 15px; /* Khoảng cách giữa icon và content */
+  margin-right: 15px;
+  /* Khoảng cách giữa icon và content */
 }
+
 .icon2 {
   text-align: center;
   padding-top: 23px;
@@ -63,8 +93,10 @@
   border-radius: 60px;
   margin-right: 15px;
   margin-left: 65px;
-  margin-bottom: 10px; /* Khoảng cách giữa icon và content */
+  margin-bottom: 10px;
+  /* Khoảng cách giữa icon và content */
 }
+
 .icon3 {
   text-align: center;
   padding-top: 23px;
@@ -72,10 +104,12 @@
   width: 70px;
   height: 70px;
   border-radius: 60px;
-  margin-right: 15px; 
+  margin-right: 15px;
   margin-left: 65px;
-  margin-bottom: 10px;/* Khoảng cách giữa icon và content */
+  margin-bottom: 10px;
+  /* Khoảng cách giữa icon và content */
 }
+
 .icon4 {
   text-align: center;
   padding-top: 23px;
@@ -83,31 +117,39 @@
   width: 70px;
   height: 70px;
   border-radius: 60px;
-  margin-right: 15px; 
+  margin-right: 15px;
   margin-left: 65px;
-  margin-bottom: 10px;/* Khoảng cách giữa icon và content */
+  margin-bottom: 10px;
+  /* Khoảng cách giữa icon và content */
 }
+
 .ant-layout {
   padding: 0;
 }
+
 .ant-layout-sider-children {
   min-width: 230px;
   max-width: 230px;
 }
+
 .ant-layout .ant-layout-sider-trigger {
   min-width: 230px;
   max-width: 230px;
 }
+
 .ant-layout .ant-layout-sider-trigger {
   background-color: #fff;
   color: #644c38;
 }
+
 .ant-layout-sider-children {
   background-color: #fff;
 }
+
 .ant-menu-light {
   background-color: #fff;
 }
+
 .ant-menu-item-selected .ant-menu-item-icon svg {
   color: #fff;
 }
@@ -115,10 +157,12 @@
 .ant-menu .ant-menu-submenu-arrow {
   color: #644c38;
 }
+
 .ant-menu-item .ant-menu-item-active .ant-menu-item-selected {
   background-color: #644c38;
   color: #fff;
 }
+
 .ant-menu-dark.ant-menu-inline .ant-menu-sub.ant-menu-inline {
   background-color: #fff;
 }
@@ -127,63 +171,28 @@
   background-color: #644c38;
   color: #fff;
 }
-.ant-menu-light .ant-menu-submenu-selected > .ant-menu-submenu-title,
-:where(.css-dev-only-do-not-override-djtmh8).ant-menu-light
-  > .ant-menu
-  .ant-menu-submenu-selected
-  > .ant-menu-submenu-title {
+
+.ant-menu-light .ant-menu-submenu-selected>.ant-menu-submenu-title,
+:where(.css-dev-only-do-not-override-djtmh8).ant-menu-light>.ant-menu .ant-menu-submenu-selected>.ant-menu-submenu-title {
   color: #644c38;
   font-size: large;
 }
-.ant-menu-item-selected > svg {
+
+.ant-menu-item-selected>svg {
   color: #644c38;
 }
+
 .ant-menu-item-content {
   color: #644c38;
 }
+
 .col-7-donhang {
   background-color: #f5f5f5;
   border-radius: 9px;
   padding: 30px;
   margin-top: 25px;
 }
-.col-7-sanpham {
-  background-color: #f5f5f5;
-  margin-top: 40px;
-  padding: 30px;
-  border-radius: 9px;
-}
-.donhang {
-  width: 100%;
-}
 
-/* Định dạng cho ô */
-.donhang td {
-  padding: 8px;
-  border-top: 1px;
-  border-left: 1px;
-  border-right: 1px; 
-}
-.sanpham {
-  width: 100%; 
-}
-
-/* Định dạng cho ô */
-.sanpham>th {
-  
-  padding: 8px; 
-  border-top: 1px;
-  border-left: 1px;
-  border-right: 1px;
-}
-.sanpham td {
-  
-  padding: 8px; 
-  border-top: 1px;
-  border-left: 1px;
-  border-right: 1px;
-  border-bottom: 1px;
-}
 .doanhthu {
   border-radius: 9px;
   background-color: #f5f5f5;
@@ -212,21 +221,13 @@
   background-color: #f1efed !important;
 }
 
-.ant-select-focused:where(
-    .css-dev-only-do-not-override-usln0u
-  ).ant-select-outlined:not(.ant-select-disabled):not(
-    .ant-select-customize-input
-  ):not(.ant-pagination-size-changer)
-  .ant-select-selector {
+.ant-select-focused:where(.css-dev-only-do-not-override-usln0u).ant-select-outlined:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector {
   border-color: #d9d9d9 !important;
   box-shadow: unset !important;
   outline: 0;
 }
 
-:where(.css-dev-only-do-not-override-usln0u).ant-select-outlined:not(
-    .ant-select-disabled
-  ):not(.ant-select-customize-input):not(.ant-pagination-size-changer):hover
-  .ant-select-selector {
+:where(.css-dev-only-do-not-override-usln0u).ant-select-outlined:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer):hover .ant-select-selector {
   border-color: #d9d9d9 !important;
 }
 
@@ -254,24 +255,47 @@
   border-end-start-radius: 0 !important;
   border-top-left-radius: 0 !important;
 }
+
 .ant-layout-header {
-  
-  height: 90px !important; 
+
+  height: 90px !important;
 }
-.ant-layout-header>div{
+
+.ant-layout-header>div {
   margin-top: 15px;
   margin-left: 50px;
   color: #644C38;
 }
-.thongbao{  
+
+.thongbao {
   font-size: larger;
-  color: #644C38; 
+  color: #644C38;
 }
-.img_sp{
+
+.img_sp {
   text-align: center;
 }
-.img_sp>img{
+
+.img_sp>img {
   width: 70px;
   height: 70px;
-  
+
+}
+/* Modal CSS */
+.modall {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 300px; /* Điều chỉnh chiều rộng của modal tùy thuộc vào nhu cầu */
+ display: block;
+  z-index: 1000;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Tạo bóng cho modal */
+  transform: translateX(100%); /* Mặc định modal ẩn ở bên phải */
+  transition: transform 0.3s ease-out; /* Tạo hiệu ứng di chuyển cho modal */
+}
+
+.modall.show {
+  transform: translateX(0); /* Hiển thị modal khi được mở */
 }
