--- a/src/components/user/css/infor.css
+++ b/src/components/user/css/infor.css
@@ -26,7 +26,7 @@
 }
 
 /* Hide the browser's default radio button */
-.form-check input {
+.gender .form-check input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
